--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "config": "^1.24.0",
     "crypto": "0.0.3",
     "express": "^4.14.0",
-    "https": "^1.0.0"
+    "https": "^1.0.0",
+    "request": "^2.79.0"
   }
 }
